# E-store_service

./: Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml  test.env
app/: main.py
app/auth/: config.py  constants.py  dependencies.py  exceptions.py  jwt.py  models.py  router.py  schemas.py  services.py
app/core/: exceptions.py
app/core/tests/: conftest.py
app/database/: config.py  dependencies.py  services.py  settings.py
app/products/: models.py  router.py  schemas.py  services.py
app/shopping_cart/: models.py  router.py  schemas.py  services.py
app/users/: models.py  router.py  schemas.py  services.py  shemas.py  validators.py
app/users/tests/: test_validators.py
tests/: conftest.py
tests/tests_products/: test_router.py
tests/tests_shopping_cart/: test_routers.py
tests/tests_users/: test_router.py
