[tool.poetry]
name = "e-store-service"
version = "0.1.0"
description = ""
authors = ["RocketMenace <grizzlygit777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic-settings = "^2.7.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
psycopg2-binary = "^2.9.10"
databases = "^0.9.0"
asyncpg = "^0.30.0"
bcrypt = "^4.2.1"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
isort = "^5.13.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
